--- a/src/main/com/Personal_CSS_Lessons/style.css
+++ b/src/main/com/Personal_CSS_Lessons/style.css
@@ -37,12 +37,44 @@ might just want to change the specific class, not the headings that have h1 styl
     border: 7px solid black;
 }
 .circle{
-    width: 500px;
-    height: 500px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     background-color: blue;
     border:7px solid black
     /*So in order to make a circle, first you have to make a square, and then afterwards, to make a 
     perfect circle, just put border radius at 50%, not px but a percentage, the rest is similar*/
 
+}
+@import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
+.text1{
+    font-size: 50px;
+    color:rgba(18, 94, 49, 0.51);
+    font-family: 'Odibee Sans', cursive;
+
+}
+.cont{
+    width: auto;
+    height: 300px;
+    border: 1px solid red;
+}
+.item{
+    width:100px;
+    height: 100px;
+    background-color: brown;
+    margin: 50 10; /*margin is an invisible space around the box, or an item*/
+    padding:10px;
+    float:left;
+}
+.item1{
+    box-sizing: content-box;
+    width:200px;
+    height: 200px;
+    background-color: rgb(18, 49, 224);
+    margin:50px 50px;/*What the margin does: first number does up and down movement
+    the second number does right and left relative to the size of the box border*/
+    /*top: 50%;*/
+    padding:10px;
+    left:50px;
+    float:right;
 }
