--- a/src/main/com/Personal_CSS_Lessons/film_festival/film_festival.css
+++ b/src/main/com/Personal_CSS_Lessons/film_festival/film_festival.css
@@ -1,13 +1,13 @@
 
 .The_Grand_Tour{
     /*text_transform: uppercase;*/
-    font-size: 50px;
+    font-size: 48px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     line: spacing 2px;
     font-weight: normal;
-    text-transform: capitalize;
-    padding: 0%;
+    text-transform: uppercase;
+    padding-top: 2%;
     margin: 0;
 }
 
@@ -31,21 +31,22 @@ img{
     height: 60%;
 }
 .Enceladus{
-    font-size: 50px;
+    font-size: 45px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     line: spacing 2px;
     font-weight: normal;
-    text-transform: capitalize;
-    padding: 0%;
+    text-transform: uppercase;
+    padding-top: 2%;
     margin: 0;
 }
 #encaladus_subtitle{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     text-align: center;
     font-weight: normal;
     font-style: italic;   
     padding: 0%;
     margin: 0;
+    padding-bottom: 4%;
 }
