Return_To_Moon exercise and additional youtube content

--- a/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/To_The_Moon.css
+++ b/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/To_The_Moon.css
@@ -61,3 +61,7 @@ a {
 #emblem{
     position: relative; top: 40px;
 }
+.intro{
+	position: center;
+}
+/*To be able to indent in CSS: div.a {text-indent:50px}*/
