--- a/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/To_The_Moon.css
+++ b/src/main/com/Personal_CSS_Lessons/Return_To_The_Moon_Exercise/To_The_Moon.css
@@ -1,3 +1,28 @@
+h1{
+	font-size: 36px;
+	margin: 0;
+}
+h2{
+	font-size: 22px;
+	margin-top: 60px;
+}
+h3{
+	font-size: 20px;
+	font-weight: normal;
+	margin-top: 60px;
+}
+h4{
+	color: #002052;
+	font-size: 15px;
+	font-weight: normal;
+	margin: 0 0 10px 0;
+}
+p{
+	color: #6f6f6f;
+	font-family: Helvetica, Arial, sans-serif;
+	line-height: 29px;
+	margin: 8px 0;
+}
 .navigation{
     background-color: #ffffff;
     color: #3a3a3a;
@@ -62,6 +87,57 @@ a {
     position: relative; top: 40px;
 }
 .intro{
-	position: center;
+	background: #efefef;
+	padding: 50px;
+	text-align: center;
+	/* position: center; */
+}
+.about {
+	margin: 40px auto;
+	width: 600px;
 }
 /*To be able to indent in CSS: div.a {text-indent:50px}*/
+.about .call-out {
+	margin: 50px 0;
+	background: #002052;
+	border-radius: 7px;
+	padding: 20px 30px;
+}
+.about .call-out h2 {
+	margin-top: 20px;
+}
+
+.about .call-out p {
+	color: #ffffff;
+	font-size: 18px;
+	line-height: 34px;
+}
+.about .left-picture {
+	float: left;
+	margin: 10px 40px 10px 0;
+}
+
+.about .right-picture {
+	float: right;
+	margin: 10px 0 10px 40px;
+}
+.about ol {
+	border-left: 5px solid #002052;
+	margin: 30px 0;
+	padding: 0 40px;
+}
+
+.about li {
+	font-size: 18px;
+	font-style: italic;
+	line-height: 30px;
+}
+.about strong {
+	color: #3a3a3a;
+}
+.footer {
+	background: #BE1E2D;
+	color: #ffffff;
+	padding: 10px 0 50px 0;
+	text-align: center;
+}
